--- a/my_tennis_club/members/templates/all_members.html
+++ b/my_tennis_club/members/templates/all_members.html
@@ -2,15 +2,21 @@
 <html lang="en">
 
 <body>
-    <h1>Members</h1>
+{% extends "master.html" %}
 
-    <ul>
-        {% for x in mymembers %}
+{% block title %}
+  My Tennis Club - List of all members
+{% endblock %}
 
-            <li> <a href="details/{{x.id}}">{{x.firstname}} {{x.lastname}}</a></li>
-            
-        {% endfor %}
-    </ul>
-    
+
+{% block content %}
+  <h1>Members</h1>
+  
+  <ul>
+    {% for x in mymembers %}
+      <li><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
+    {% endfor %}
+  </ul>
+{% endblock %}
 </body>
 </html>
